# pifleet

./: .gitignore  pyproject.toml
pifleet/: config.py  exceptions.py  main.py  schemas.py
pifleet/api/: deps.py
pifleet/api/v1/: endpoints.py
pifleet/crud/: device.py  devicestatus.py
pifleet/db/: models.py  session.py
